output/mainweb/_internal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RANGE
    STARTSPACES

Grammar

Rule 0     S' -> line
Rule 1     line -> ENDLINESPACES
Rule 2     line -> COMMENT ENDLINESPACES
Rule 3     line -> linelabel ENDLINESPACES
Rule 4     line -> linelabelinstr ENDLINESPACES
Rule 5     line -> lineinstruction ENDLINESPACES
Rule 6     line -> sectiondeclaration ENDLINESPACES
Rule 7     line -> linedeclaration ENDLINESPACES
Rule 8     line -> lineassertion ENDLINESPACES
Rule 9     line -> CONST error ENDLINESPACES
Rule 10    linelabel -> LABEL
Rule 11    linelabel -> LABEL SPACEORTAB COMMENT
Rule 12    linelabel -> LABEL error COMMA
Rule 13    sectiondeclaration -> SECTION SECTIONNAME
Rule 14    sectiondeclaration -> SECTION SECTIONNAME SPACEORTAB COMMENT
Rule 15    lineassertion -> ASSERTION ASSERTIONDATA
Rule 16    lineassertion -> ASSERTION ASSERTIONDATA SPACEORTAB COMMENT
Rule 17    linedeclaration -> LABEL SPACEORTAB declarationconst
Rule 18    linedeclaration -> LABEL SPACEORTAB declarationconst SPACEORTAB COMMENT
Rule 19    linedeclaration -> LABEL SPACEORTAB declarationsize
Rule 20    linedeclaration -> LABEL SPACEORTAB declarationsize SPACEORTAB COMMENT
Rule 21    lineinstruction -> instruction
Rule 22    lineinstruction -> instruction SPACEORTAB COMMENT
Rule 23    linelabelinstr -> LABEL SPACEORTAB instruction
Rule 24    linelabelinstr -> LABEL SPACEORTAB instruction SPACEORTAB COMMENT
Rule 25    instruction -> datainstruction
Rule 26    instruction -> meminstruction
Rule 27    instruction -> branchinstruction
Rule 28    instruction -> multiplememinstruction
Rule 29    instruction -> swapinstruction
Rule 30    instruction -> shiftinstruction
Rule 31    instruction -> psrinstruction
Rule 32    instruction -> svcinstruction
Rule 33    instruction -> multiplyinstruction
Rule 34    instruction -> multiplylonginstruction
Rule 35    instruction -> nopinstruction
Rule 36    datainstruction -> datainst2op
Rule 37    datainstruction -> datainst3op
Rule 38    datainstruction -> datainsttest
Rule 39    condandspace -> SPACEORTAB
Rule 40    condandspace -> CONDITION SPACEORTAB
Rule 41    flagscondandspace -> CONDITION MODIFYFLAGS SPACEORTAB
Rule 42    flagscondandspace -> CONDITION SPACEORTAB
Rule 43    flagscondandspace -> MODIFYFLAGS SPACEORTAB
Rule 44    flagscondandspace -> SPACEORTAB
Rule 45    accessmodifiersandspace -> SPACEORTAB
Rule 46    accessmodifiersandspace -> BYTEONLY SPACEORTAB
Rule 47    accessmodifiersandspace -> HALFONLY SPACEORTAB
Rule 48    accessmodifiersandspace -> SIGNEDBYTE SPACEORTAB
Rule 49    accessmodifiersandspace -> SIGNEDHALF SPACEORTAB
Rule 50    accessmodifiersandspace -> MEMPRIVILEGED SPACEORTAB
Rule 51    accessmodifiersandspace -> BYTEONLY MEMPRIVILEGED SPACEORTAB
Rule 52    datainst2op -> OPDATA2OP logmnemonic flagscondandspace REG COMMA op2
Rule 53    datainst2op -> OPDATA2OP logmnemonic flagscondandspace error COMMA op2
Rule 54    datainst2op -> OPDATA2OP logmnemonic flagscondandspace REG error op2
Rule 55    datainst2op -> OPDATA2OP logmnemonic flagscondandspace REG error COMMA op2
Rule 56    datainst3op -> OPDATA3OP logmnemonic flagscondandspace REG COMMA REG COMMA op2
Rule 57    datainst3op -> OPDATA3OP logmnemonic flagscondandspace REG error REG COMMA op2
Rule 58    datainst3op -> OPDATA3OP logmnemonic flagscondandspace REG COMMA REG error op2
Rule 59    datainst3op -> OPDATA3OP logmnemonic flagscondandspace REG COMMA REG
Rule 60    datainst3op -> OPDATA3OP logmnemonic flagscondandspace REG error COMMA REG COMMA op2
Rule 61    datainst3op -> OPDATA3OP logmnemonic flagscondandspace REG COMMA REG error COMMA op2
Rule 62    datainsttest -> OPDATATEST logmnemonic condandspace REG COMMA op2
Rule 63    logmnemonic -> <empty>
Rule 64    op2 -> REG
Rule 65    op2 -> SHARP CONST
Rule 66    op2 -> REG COMMA shift
Rule 67    op2 -> REG shift
Rule 68    shift -> shiftbyreg
Rule 69    shift -> shiftbyvalue
Rule 70    shiftbyreg -> INNERSHIFT
Rule 71    shiftbyreg -> INNERSHIFT SPACEORTAB REG
Rule 72    shiftbyvalue -> INNERSHIFT SHARP CONST
Rule 73    shiftbyvalue -> INNERSHIFT SPACEORTAB SHARP CONST
Rule 74    shiftinstruction -> shiftinstrconst
Rule 75    shiftinstruction -> shiftinstrreg
Rule 76    shiftinstruction -> shiftinstrrrx
Rule 77    shiftinstrrrx -> OPSHIFT logmnemonic flagscondandspace REG COMMA REG
Rule 78    shiftinstrconst -> OPSHIFT logmnemonic flagscondandspace REG COMMA REG COMMA SHARP CONST
Rule 79    shiftinstrreg -> OPSHIFT logmnemonic flagscondandspace REG COMMA REG COMMA REG
Rule 80    meminstruction -> OPMEM logmnemonic accessmodifiersandspace REG COMMA memaccess
Rule 81    meminstruction -> OPMEM logmnemonic CONDITION accessmodifiersandspace REG COMMA memaccess
Rule 82    memaccess -> memaccesspre
Rule 83    memaccess -> memaccesspost
Rule 84    memaccess -> memaccesslabel
Rule 85    memaccess -> memaccesslabeladdr
Rule 86    memaccess -> memaccessimmediate
Rule 87    memaccesspre -> OPENBRACKET REG CLOSEBRACKET
Rule 88    memaccesspre -> OPENBRACKET REG COMMA signedoffsetreg memaccesspreclosing
Rule 89    memaccesspre -> OPENBRACKET REG COMMA SHARP CONST memaccesspreclosing
Rule 90    memaccesspre -> OPENBRACKET REG COMMA signedoffsetreg COMMA shiftnoreg memaccesspreclosing
Rule 91    memaccesspre -> OPENBRACKET REG COMMA REG error memaccesspreclosing
Rule 92    shiftnoreg -> INNERSHIFT
Rule 93    shiftnoreg -> INNERSHIFT SHARP CONST
Rule 94    shiftnoreg -> INNERSHIFT SPACEORTAB SHARP CONST
Rule 95    signedoffsetreg -> REG
Rule 96    signedoffsetreg -> SIGN REG
Rule 97    memaccesspreclosing -> CLOSEBRACKET
Rule 98    memaccesspreclosing -> CLOSEBRACKET EXCLAMATION
Rule 99    memaccesspost -> OPENBRACKET REG CLOSEBRACKET COMMA signedoffsetreg
Rule 100   memaccesspost -> OPENBRACKET REG CLOSEBRACKET COMMA signedoffsetreg COMMA shiftnoreg
Rule 101   memaccesspost -> OPENBRACKET REG CLOSEBRACKET COMMA SHARP CONST
Rule 102   memaccesslabel -> LABEL
Rule 103   memaccesslabeladdr -> EQUALS LABEL
Rule 104   memaccessimmediate -> EQUALS CONST
Rule 105   swapinstruction -> OPSWP logmnemonic SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
Rule 106   swapinstruction -> OPSWP logmnemonic BYTEONLY SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
Rule 107   swapinstruction -> OPSWP logmnemonic CONDITION SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
Rule 108   swapinstruction -> OPSWP logmnemonic CONDITION BYTEONLY SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
Rule 109   branchinstruction -> OPBRANCH logmnemonic condandspace LABEL
Rule 110   branchinstruction -> OPBRANCH logmnemonic condandspace REG
Rule 111   branchinstruction -> OPBRANCH logmnemonic condandspace CONST error
Rule 112   multiplememinstruction -> stackinstruction
Rule 113   multiplememinstruction -> stmldminstruction
Rule 114   listregswithpsr -> OPENBRACE LISTREGS CLOSEBRACE
Rule 115   listregswithpsr -> OPENBRACE LISTREGS CLOSEBRACE CARET
Rule 116   stackinstruction -> OPMULTIPLEMEM logmnemonic condandspace listregswithpsr
Rule 117   stmldmtargetreg -> REG
Rule 118   stmldmtargetreg -> REG EXCLAMATION
Rule 119   stmldmmodifier -> SPACEORTAB
Rule 120   stmldmmodifier -> CONDITION SPACEORTAB
Rule 121   stmldmmodifier -> LDMSTMMODE SPACEORTAB
Rule 122   stmldmmodifier -> CONDITION LDMSTMMODE SPACEORTAB
Rule 123   stmldminstruction -> OPMULTIPLEMEM logmnemonic stmldmmodifier stmldmtargetreg COMMA listregswithpsr
Rule 124   psrinstruction -> OPPSR logmnemonic condandspace REG COMMA PSR
Rule 125   psrinstruction -> OPPSR logmnemonic condandspace PSR COMMA REG
Rule 126   psrinstruction -> OPPSR logmnemonic condandspace PSR COMMA SHARP CONST
Rule 127   svcinstruction -> OPSVC logmnemonic condandspace CONST
Rule 128   svcinstruction -> OPSVC logmnemonic condandspace SHARP CONST
Rule 129   multiplyinstruction -> OPMUL logmnemonic flagscondandspace REG COMMA REG COMMA REG
Rule 130   multiplyinstruction -> OPMUL logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA REG
Rule 131   multiplyinstruction -> OPMUL logmnemonic flagscondandspace REG COMMA REG COMMA SHARP CONST
Rule 132   multiplylonginstruction -> OPMULL logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA REG
Rule 133   multiplylonginstruction -> OPMULL logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA SHARP CONST
Rule 134   nopinstruction -> OPNOP logmnemonic
Rule 135   nopinstruction -> OPNOP logmnemonic CONDITION
Rule 136   declarationconst -> CONSTDEC LISTINIT
Rule 137   declarationconst -> CONSTDECWITHOUTSIZE LISTINIT
Rule 138   declarationsize -> VARDEC LISTINIT
Rule 139   declarationsize -> VARDECWITHOUTSIZE LISTINIT

Terminals, with rules where they appear

ASSERTION            : 15 16
ASSERTIONDATA        : 15 16
BYTEONLY             : 46 51 106 108
CARET                : 115
CLOSEBRACE           : 114 115
CLOSEBRACKET         : 87 97 98 99 100 101 105 106 107 108
COMMA                : 12 52 53 55 56 56 57 58 59 60 60 61 61 62 66 77 78 78 79 79 80 81 88 89 90 90 91 99 100 100 101 105 105 106 106 107 107 108 108 123 124 125 126 129 129 130 130 130 131 131 132 132 132 133 133 133
COMMENT              : 2 11 14 16 18 20 22 24
CONDITION            : 40 41 42 81 107 108 120 122 135
CONST                : 9 65 72 73 78 89 93 94 101 104 111 126 127 128 131 133
CONSTDEC             : 136
CONSTDECWITHOUTSIZE  : 137
ENDLINESPACES        : 1 2 3 4 5 6 7 8 9
EQUALS               : 103 104
EXCLAMATION          : 98 118
HALFONLY             : 47
INNERSHIFT           : 70 71 72 73 92 93 94
LABEL                : 10 11 12 17 18 19 20 23 24 102 103 109
LDMSTMMODE           : 121 122
LISTINIT             : 136 137 138 139
LISTREGS             : 114 115
MEMPRIVILEGED        : 50 51
MODIFYFLAGS          : 41 43
OPBRANCH             : 109 110 111
OPDATA2OP            : 52 53 54 55
OPDATA3OP            : 56 57 58 59 60 61
OPDATATEST           : 62
OPENBRACE            : 114 115
OPENBRACKET          : 87 88 89 90 91 99 100 101 105 106 107 108
OPMEM                : 80 81
OPMUL                : 129 130 131
OPMULL               : 132 133
OPMULTIPLEMEM        : 116 123
OPNOP                : 134 135
OPPSR                : 124 125 126
OPSHIFT              : 77 78 79
OPSVC                : 127 128
OPSWP                : 105 106 107 108
PSR                  : 124 125 126
RANGE                : 
REG                  : 52 54 55 56 56 57 57 58 58 59 59 60 60 61 61 62 64 66 67 71 77 77 78 78 79 79 79 80 81 87 88 89 90 91 91 95 96 99 100 101 105 105 105 106 106 106 107 107 107 108 108 108 110 117 118 124 125 129 129 129 130 130 130 130 131 131 132 132 132 132 133 133 133
SECTION              : 13 14
SECTIONNAME          : 13 14
SHARP                : 65 72 73 78 89 93 94 101 126 128 131 133
SIGN                 : 96
SIGNEDBYTE           : 48
SIGNEDHALF           : 49
SPACEORTAB           : 11 14 16 17 18 18 19 20 20 22 23 24 24 39 40 41 42 43 44 45 46 47 48 49 50 51 71 73 94 105 106 107 108 119 120 121 122
STARTSPACES          : 
VARDEC               : 138
VARDECWITHOUTSIZE    : 139
error                : 9 12 53 54 55 57 58 60 61 91 111

Nonterminals, with rules where they appear

accessmodifiersandspace : 80 81
branchinstruction    : 27
condandspace         : 62 109 110 111 116 124 125 126 127 128
datainst2op          : 36
datainst3op          : 37
datainstruction      : 25
datainsttest         : 38
declarationconst     : 17 18
declarationsize      : 19 20
flagscondandspace    : 52 53 54 55 56 57 58 59 60 61 77 78 79 129 130 131 132 133
instruction          : 21 22 23 24
line                 : 0
lineassertion        : 8
linedeclaration      : 7
lineinstruction      : 5
linelabel            : 3
linelabelinstr       : 4
listregswithpsr      : 116 123
logmnemonic          : 52 53 54 55 56 57 58 59 60 61 62 77 78 79 80 81 105 106 107 108 109 110 111 116 123 124 125 126 127 128 129 130 131 132 133 134 135
memaccess            : 80 81
memaccessimmediate   : 86
memaccesslabel       : 84
memaccesslabeladdr   : 85
memaccesspost        : 83
memaccesspre         : 82
memaccesspreclosing  : 88 89 90 91
meminstruction       : 26
multiplememinstruction : 28
multiplyinstruction  : 33
multiplylonginstruction : 34
nopinstruction       : 35
op2                  : 52 53 54 55 56 57 58 60 61 62
psrinstruction       : 31
sectiondeclaration   : 6
shift                : 66 67
shiftbyreg           : 68
shiftbyvalue         : 69
shiftinstrconst      : 74
shiftinstrreg        : 75
shiftinstrrrx        : 76
shiftinstruction     : 30
shiftnoreg           : 90 100
signedoffsetreg      : 88 90 99 100
stackinstruction     : 112
stmldminstruction    : 113
stmldmmodifier       : 123
stmldmtargetreg      : 123
svcinstruction       : 32
swapinstruction      : 29

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . ENDLINESPACES
    (2) line -> . COMMENT ENDLINESPACES
    (3) line -> . linelabel ENDLINESPACES
    (4) line -> . linelabelinstr ENDLINESPACES
    (5) line -> . lineinstruction ENDLINESPACES
    (6) line -> . sectiondeclaration ENDLINESPACES
    (7) line -> . linedeclaration ENDLINESPACES
    (8) line -> . lineassertion ENDLINESPACES
    (9) line -> . CONST error ENDLINESPACES
    (10) linelabel -> . LABEL
    (11) linelabel -> . LABEL SPACEORTAB COMMENT
    (12) linelabel -> . LABEL error COMMA
    (23) linelabelinstr -> . LABEL SPACEORTAB instruction
    (24) linelabelinstr -> . LABEL SPACEORTAB instruction SPACEORTAB COMMENT
    (21) lineinstruction -> . instruction
    (22) lineinstruction -> . instruction SPACEORTAB COMMENT
    (13) sectiondeclaration -> . SECTION SECTIONNAME
    (14) sectiondeclaration -> . SECTION SECTIONNAME SPACEORTAB COMMENT
    (17) linedeclaration -> . LABEL SPACEORTAB declarationconst
    (18) linedeclaration -> . LABEL SPACEORTAB declarationconst SPACEORTAB COMMENT
    (19) linedeclaration -> . LABEL SPACEORTAB declarationsize
    (20) linedeclaration -> . LABEL SPACEORTAB declarationsize SPACEORTAB COMMENT
    (15) lineassertion -> . ASSERTION ASSERTIONDATA
    (16) lineassertion -> . ASSERTION ASSERTIONDATA SPACEORTAB COMMENT
    (25) instruction -> . datainstruction
    (26) instruction -> . meminstruction
    (27) instruction -> . branchinstruction
    (28) instruction -> . multiplememinstruction
    (29) instruction -> . swapinstruction
    (30) instruction -> . shiftinstruction
    (31) instruction -> . psrinstruction
    (32) instruction -> . svcinstruction
    (33) instruction -> . multiplyinstruction
    (34) instruction -> . multiplylonginstruction
    (35) instruction -> . nopinstruction
    (36) datainstruction -> . datainst2op
    (37) datainstruction -> . datainst3op
    (38) datainstruction -> . datainsttest
    (80) meminstruction -> . OPMEM logmnemonic accessmodifiersandspace REG COMMA memaccess
    (81) meminstruction -> . OPMEM logmnemonic CONDITION accessmodifiersandspace REG COMMA memaccess
    (109) branchinstruction -> . OPBRANCH logmnemonic condandspace LABEL
    (110) branchinstruction -> . OPBRANCH logmnemonic condandspace REG
    (111) branchinstruction -> . OPBRANCH logmnemonic condandspace CONST error
    (112) multiplememinstruction -> . stackinstruction
    (113) multiplememinstruction -> . stmldminstruction
    (105) swapinstruction -> . OPSWP logmnemonic SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (106) swapinstruction -> . OPSWP logmnemonic BYTEONLY SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (107) swapinstruction -> . OPSWP logmnemonic CONDITION SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (108) swapinstruction -> . OPSWP logmnemonic CONDITION BYTEONLY SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (74) shiftinstruction -> . shiftinstrconst
    (75) shiftinstruction -> . shiftinstrreg
    (76) shiftinstruction -> . shiftinstrrrx
    (124) psrinstruction -> . OPPSR logmnemonic condandspace REG COMMA PSR
    (125) psrinstruction -> . OPPSR logmnemonic condandspace PSR COMMA REG
    (126) psrinstruction -> . OPPSR logmnemonic condandspace PSR COMMA SHARP CONST
    (127) svcinstruction -> . OPSVC logmnemonic condandspace CONST
    (128) svcinstruction -> . OPSVC logmnemonic condandspace SHARP CONST
    (129) multiplyinstruction -> . OPMUL logmnemonic flagscondandspace REG COMMA REG COMMA REG
    (130) multiplyinstruction -> . OPMUL logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA REG
    (131) multiplyinstruction -> . OPMUL logmnemonic flagscondandspace REG COMMA REG COMMA SHARP CONST
    (132) multiplylonginstruction -> . OPMULL logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA REG
    (133) multiplylonginstruction -> . OPMULL logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA SHARP CONST
    (134) nopinstruction -> . OPNOP logmnemonic
    (135) nopinstruction -> . OPNOP logmnemonic CONDITION
    (52) datainst2op -> . OPDATA2OP logmnemonic flagscondandspace REG COMMA op2
    (53) datainst2op -> . OPDATA2OP logmnemonic flagscondandspace error COMMA op2
    (54) datainst2op -> . OPDATA2OP logmnemonic flagscondandspace REG error op2
    (55) datainst2op -> . OPDATA2OP logmnemonic flagscondandspace REG error COMMA op2
    (56) datainst3op -> . OPDATA3OP logmnemonic flagscondandspace REG COMMA REG COMMA op2
    (57) datainst3op -> . OPDATA3OP logmnemonic flagscondandspace REG error REG COMMA op2
    (58) datainst3op -> . OPDATA3OP logmnemonic flagscondandspace REG COMMA REG error op2
    (59) datainst3op -> . OPDATA3OP logmnemonic flagscondandspace REG COMMA REG
    (60) datainst3op -> . OPDATA3OP logmnemonic flagscondandspace REG error COMMA REG COMMA op2
    (61) datainst3op -> . OPDATA3OP logmnemonic flagscondandspace REG COMMA REG error COMMA op2
    (62) datainsttest -> . OPDATATEST logmnemonic condandspace REG COMMA op2
    (116) stackinstruction -> . OPMULTIPLEMEM logmnemonic condandspace listregswithpsr
    (123) stmldminstruction -> . OPMULTIPLEMEM logmnemonic stmldmmodifier stmldmtargetreg COMMA listregswithpsr
    (78) shiftinstrconst -> . OPSHIFT logmnemonic flagscondandspace REG COMMA REG COMMA SHARP CONST
    (79) shiftinstrreg -> . OPSHIFT logmnemonic flagscondandspace REG COMMA REG COMMA REG
    (77) shiftinstrrrx -> . OPSHIFT logmnemonic flagscondandspace REG COMMA REG

    ENDLINESPACES   shift and go to state 2
    COMMENT         shift and go to state 3
    CONST           shift and go to state 10
    LABEL           shift and go to state 11
    SECTION         shift and go to state 13
    ASSERTION       shift and go to state 14
    OPMEM           shift and go to state 29
    OPBRANCH        shift and go to state 30
    OPSWP           shift and go to state 33
    OPPSR           shift and go to state 37
    OPSVC           shift and go to state 38
    OPMUL           shift and go to state 39
    OPMULL          shift and go to state 40
    OPNOP           shift and go to state 41
    OPDATA2OP       shift and go to state 42
    OPDATA3OP       shift and go to state 43
    OPDATATEST      shift and go to state 44
    OPMULTIPLEMEM   shift and go to state 45
    OPSHIFT         shift and go to state 46

    line                           shift and go to state 1
    linelabel                      shift and go to state 4
    linelabelinstr                 shift and go to state 5
    lineinstruction                shift and go to state 6
    sectiondeclaration             shift and go to state 7
    linedeclaration                shift and go to state 8
    lineassertion                  shift and go to state 9
    instruction                    shift and go to state 12
    datainstruction                shift and go to state 15
    meminstruction                 shift and go to state 16
    branchinstruction              shift and go to state 17
    multiplememinstruction         shift and go to state 18
    swapinstruction                shift and go to state 19
    shiftinstruction               shift and go to state 20
    psrinstruction                 shift and go to state 21
    svcinstruction                 shift and go to state 22
    multiplyinstruction            shift and go to state 23
    multiplylonginstruction        shift and go to state 24
    nopinstruction                 shift and go to state 25
    datainst2op                    shift and go to state 26
    datainst3op                    shift and go to state 27
    datainsttest                   shift and go to state 28
    stackinstruction               shift and go to state 31
    stmldminstruction              shift and go to state 32
    shiftinstrconst                shift and go to state 34
    shiftinstrreg                  shift and go to state 35
    shiftinstrrrx                  shift and go to state 36

state 1

    (0) S' -> line .



state 2

    (1) line -> ENDLINESPACES .

    $end            reduce using rule 1 (line -> ENDLINESPACES .)


state 3

    (2) line -> COMMENT . ENDLINESPACES

    ENDLINESPACES   shift and go to state 47


state 4

    (3) line -> linelabel . ENDLINESPACES

    ENDLINESPACES   shift and go to state 48


state 5

    (4) line -> linelabelinstr . ENDLINESPACES

    ENDLINESPACES   shift and go to state 49


state 6

    (5) line -> lineinstruction . ENDLINESPACES

    ENDLINESPACES   shift and go to state 50


state 7

    (6) line -> sectiondeclaration . ENDLINESPACES

    ENDLINESPACES   shift and go to state 51


state 8

    (7) line -> linedeclaration . ENDLINESPACES

    ENDLINESPACES   shift and go to state 52


state 9

    (8) line -> lineassertion . ENDLINESPACES

    ENDLINESPACES   shift and go to state 53


state 10

    (9) line -> CONST . error ENDLINESPACES

    error           shift and go to state 54


state 11

    (10) linelabel -> LABEL .
    (11) linelabel -> LABEL . SPACEORTAB COMMENT
    (12) linelabel -> LABEL . error COMMA
    (23) linelabelinstr -> LABEL . SPACEORTAB instruction
    (24) linelabelinstr -> LABEL . SPACEORTAB instruction SPACEORTAB COMMENT
    (17) linedeclaration -> LABEL . SPACEORTAB declarationconst
    (18) linedeclaration -> LABEL . SPACEORTAB declarationconst SPACEORTAB COMMENT
    (19) linedeclaration -> LABEL . SPACEORTAB declarationsize
    (20) linedeclaration -> LABEL . SPACEORTAB declarationsize SPACEORTAB COMMENT

    ENDLINESPACES   reduce using rule 10 (linelabel -> LABEL .)
    SPACEORTAB      shift and go to state 55
    error           shift and go to state 56


state 12

    (21) lineinstruction -> instruction .
    (22) lineinstruction -> instruction . SPACEORTAB COMMENT

    ENDLINESPACES   reduce using rule 21 (lineinstruction -> instruction .)
    SPACEORTAB      shift and go to state 57


state 13

    (13) sectiondeclaration -> SECTION . SECTIONNAME
    (14) sectiondeclaration -> SECTION . SECTIONNAME SPACEORTAB COMMENT

    SECTIONNAME     shift and go to state 58


state 14

    (15) lineassertion -> ASSERTION . ASSERTIONDATA
    (16) lineassertion -> ASSERTION . ASSERTIONDATA SPACEORTAB COMMENT

    ASSERTIONDATA   shift and go to state 59


state 15

    (25) instruction -> datainstruction .

    SPACEORTAB      reduce using rule 25 (instruction -> datainstruction .)
    ENDLINESPACES   reduce using rule 25 (instruction -> datainstruction .)


state 16

    (26) instruction -> meminstruction .

    SPACEORTAB      reduce using rule 26 (instruction -> meminstruction .)
    ENDLINESPACES   reduce using rule 26 (instruction -> meminstruction .)


state 17

    (27) instruction -> branchinstruction .

    SPACEORTAB      reduce using rule 27 (instruction -> branchinstruction .)
    ENDLINESPACES   reduce using rule 27 (instruction -> branchinstruction .)


state 18

    (28) instruction -> multiplememinstruction .

    SPACEORTAB      reduce using rule 28 (instruction -> multiplememinstruction .)
    ENDLINESPACES   reduce using rule 28 (instruction -> multiplememinstruction .)


state 19

    (29) instruction -> swapinstruction .

    SPACEORTAB      reduce using rule 29 (instruction -> swapinstruction .)
    ENDLINESPACES   reduce using rule 29 (instruction -> swapinstruction .)


state 20

    (30) instruction -> shiftinstruction .

    SPACEORTAB      reduce using rule 30 (instruction -> shiftinstruction .)
    ENDLINESPACES   reduce using rule 30 (instruction -> shiftinstruction .)


state 21

    (31) instruction -> psrinstruction .

    SPACEORTAB      reduce using rule 31 (instruction -> psrinstruction .)
    ENDLINESPACES   reduce using rule 31 (instruction -> psrinstruction .)


state 22

    (32) instruction -> svcinstruction .

    SPACEORTAB      reduce using rule 32 (instruction -> svcinstruction .)
    ENDLINESPACES   reduce using rule 32 (instruction -> svcinstruction .)


state 23

    (33) instruction -> multiplyinstruction .

    SPACEORTAB      reduce using rule 33 (instruction -> multiplyinstruction .)
    ENDLINESPACES   reduce using rule 33 (instruction -> multiplyinstruction .)


state 24

    (34) instruction -> multiplylonginstruction .

    SPACEORTAB      reduce using rule 34 (instruction -> multiplylonginstruction .)
    ENDLINESPACES   reduce using rule 34 (instruction -> multiplylonginstruction .)


state 25

    (35) instruction -> nopinstruction .

    SPACEORTAB      reduce using rule 35 (instruction -> nopinstruction .)
    ENDLINESPACES   reduce using rule 35 (instruction -> nopinstruction .)


state 26

    (36) datainstruction -> datainst2op .

    SPACEORTAB      reduce using rule 36 (datainstruction -> datainst2op .)
    ENDLINESPACES   reduce using rule 36 (datainstruction -> datainst2op .)


state 27

    (37) datainstruction -> datainst3op .

    SPACEORTAB      reduce using rule 37 (datainstruction -> datainst3op .)
    ENDLINESPACES   reduce using rule 37 (datainstruction -> datainst3op .)


state 28

    (38) datainstruction -> datainsttest .

    SPACEORTAB      reduce using rule 38 (datainstruction -> datainsttest .)
    ENDLINESPACES   reduce using rule 38 (datainstruction -> datainsttest .)


state 29

    (80) meminstruction -> OPMEM . logmnemonic accessmodifiersandspace REG COMMA memaccess
    (81) meminstruction -> OPMEM . logmnemonic CONDITION accessmodifiersandspace REG COMMA memaccess
    (63) logmnemonic -> .

    CONDITION       reduce using rule 63 (logmnemonic -> .)
    SPACEORTAB      reduce using rule 63 (logmnemonic -> .)
    BYTEONLY        reduce using rule 63 (logmnemonic -> .)
    HALFONLY        reduce using rule 63 (logmnemonic -> .)
    SIGNEDBYTE      reduce using rule 63 (logmnemonic -> .)
    SIGNEDHALF      reduce using rule 63 (logmnemonic -> .)
    MEMPRIVILEGED   reduce using rule 63 (logmnemonic -> .)

    logmnemonic                    shift and go to state 60

state 30

    (109) branchinstruction -> OPBRANCH . logmnemonic condandspace LABEL
    (110) branchinstruction -> OPBRANCH . logmnemonic condandspace REG
    (111) branchinstruction -> OPBRANCH . logmnemonic condandspace CONST error
    (63) logmnemonic -> .

    SPACEORTAB      reduce using rule 63 (logmnemonic -> .)
    CONDITION       reduce using rule 63 (logmnemonic -> .)

    logmnemonic                    shift and go to state 61

state 31

    (112) multiplememinstruction -> stackinstruction .

    SPACEORTAB      reduce using rule 112 (multiplememinstruction -> stackinstruction .)
    ENDLINESPACES   reduce using rule 112 (multiplememinstruction -> stackinstruction .)


state 32

    (113) multiplememinstruction -> stmldminstruction .

    SPACEORTAB      reduce using rule 113 (multiplememinstruction -> stmldminstruction .)
    ENDLINESPACES   reduce using rule 113 (multiplememinstruction -> stmldminstruction .)


state 33

    (105) swapinstruction -> OPSWP . logmnemonic SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (106) swapinstruction -> OPSWP . logmnemonic BYTEONLY SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (107) swapinstruction -> OPSWP . logmnemonic CONDITION SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (108) swapinstruction -> OPSWP . logmnemonic CONDITION BYTEONLY SPACEORTAB REG COMMA REG COMMA OPENBRACKET REG CLOSEBRACKET
    (63) logmnemonic -> .

    SPACEORTAB      reduce using rule 63 (logmnemonic -> .)
    BYTEONLY        reduce using rule 63 (logmnemonic -> .)
    CONDITION       reduce using rule 63 (logmnemonic -> .)

    logmnemonic                    shift and go to state 62

state 34

    (74) shiftinstruction -> shiftinstrconst .

    SPACEORTAB      reduce using rule 74 (shiftinstruction -> shiftinstrconst .)
    ENDLINESPACES   reduce using rule 74 (shiftinstruction -> shiftinstrconst .)


state 35

    (75) shiftinstruction -> shiftinstrreg .

    SPACEORTAB      reduce using rule 75 (shiftinstruction -> shiftinstrreg .)
    ENDLINESPACES   reduce using rule 75 (shiftinstruction -> shiftinstrreg .)


state 36

    (76) shiftinstruction -> shiftinstrrrx .

    SPACEORTAB      reduce using rule 76 (shiftinstruction -> shiftinstrrrx .)
    ENDLINESPACES   reduce using rule 76 (shiftinstruction -> shiftinstrrrx .)


state 37

    (124) psrinstruction -> OPPSR . logmnemonic condandspace REG COMMA PSR
    (125) psrinstruction -> OPPSR . logmnemonic condandspace PSR COMMA REG
    (126) psrinstruction -> OPPSR . logmnemonic condandspace PSR COMMA SHARP CONST
    (63) logmnemonic -> .

    SPACEORTAB      reduce using rule 63 (logmnemonic -> .)
    CONDITION       reduce using rule 63 (logmnemonic -> .)

    logmnemonic                    shift and go to state 63

state 38

    (127) svcinstruction -> OPSVC . logmnemonic condandspace CONST
    (128) svcinstruction -> OPSVC . logmnemonic condandspace SHARP CONST
    (63) logmnemonic -> .

    SPACEORTAB      reduce using rule 63 (logmnemonic -> .)
    CONDITION       reduce using rule 63 (logmnemonic -> .)

    logmnemonic                    shift and go to state 64

state 39

    (129) multiplyinstruction -> OPMUL . logmnemonic flagscondandspace REG COMMA REG COMMA REG
    (130) multiplyinstruction -> OPMUL . logmnemonic flagscondandspace REG COMMA REG COMMA REG COMMA REG
    (131) multiplyinstruction -> OPMUL . logmnemonic flagscondandspace REG COMMA REG COMMA SHARP CONST
    (63) logmnemonic -> .

    CONDITION       reduce using rule 63 (logmnemonic -> .)
    MODIFYFLAGS     reduce using rule 63 (logmnemonic -> .)
    SPACEORTAB      reduce using rule 63 (logmnemonic -> .)

    logmnemonic                    shift and go to state 65

state 40
